--- a/server_config.json
+++ b/server_config.json
@@ -1,5 +1,5 @@
 {                                                                                                                                                                                                    
-    "id": "https://raw.githubusercontent.com/trel/schema_testing/master/server_config#",                                                                                                                               
+    "id": "https://raw.githubusercontent.com/trel/schema_testing/master/server_config.json#",                                                                                                                               
     "$schema": "http://json-schema.org/draft-04/schema#",                                                                                                                                            
     "type": "object",                                                                                                                                                                                
     "properties": {                                                                                                                                                                                  
@@ -13,7 +13,7 @@
         "re_function_name_mapping_set": {                                                                                                                                                            
             "type": "array",                                                                                                                                                                         
             "items": {                                                                                                                                                                               
-                "$ref": "filenameb.json"                                                                                                                                                                   
+                "$ref": "filename.json"                                                                                                                                                                   
             }                                                                                                                                                                                        
         },                                                                                                                                                                                           
         "re_data_variable_mapping_set": {                                                                                                                                                            
